<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BC-FollowMe</string>
    <string name="splashScreen">SplashScreen</string>
    <string name="loginActivityTitle">Login</string>
    <string name="userName">User Name:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="registerMe">I dont have an account. Register Me!</string>
    <string name="accountConfirmed">You have been logged in!</string>
    <string name="createAccountActivityTitle">Create Account</string>
    <string name="email">Email Address:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="legalDisclaimer">Thank you for choosing BC-FollowMe! By clicking Create Account, you agree to the Terms of Service.</string>
    <string name="createAccountButtonText">Create Account</string>
    <string name="welcome">Follow Me</string>
    <string name="actionSettings">Settings</string>
    <string name="drawerOpen">Open Navigation Drawer</string>
    <string name="drawerClose">Close Navigation Drawer</string>
    <string name="editExcursionActivityTitle">Edit Excursion</string>
    <string name="travelModeSwitchLabel">Travel Mode</string>
    <string name="walkingMode">Walking</string>
    <string name="drivingMode">Driving</string>
    <string name="shareModeSwitchLabel">Share Mode</string>
    <string name="privateMode">Private</string>
    <string name="publicMode">Public</string>
    <string name="loadExcursionActivityTitle">Load Excursion</string>
    <string name="addObservationActivityTitle">Add Observation</string>
    <string name="gps">GPS Location:</string>
    <string name="editObservationActivityTitle">Edit Observations</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="menuStartGPSRecording">Start GPS</string>
    <string name="menuStopGPSRecording">Stop GPS</string>
    <string name="navLauncherDescription">Icon that when clicked will launch the menu bar</string>
    <string name="aboutHeader">About BC-FollowMe</string>
    <string name="aboutText">The application you need for your next hike into the wild!  Follow the adventure of others or create an adventrue of your
        own with BC-FollowMe!  To learn more about BC-FollowMe, check out the webiste!</string>
    <string name="aboutLink">http://bc-followme.azurewebsites.net/</string>
    <string name="legalAbout">2014 Bridgewater College.  Version 1.13.  Powered by Google Maps V2.</string>

    <string-array name="mapCommands">
        <item>New Excursion</item>
        <item>Load Excursion</item>
        <item>Edit Excursion</item>
        <item>Add Observation</item>
        <item>Edit Observation</item>
        <item>Settings</item>
        <item>About</item>
        <item>Logout</item>
    </string-array>

    <array name="mapCommandsIcons">
        <item>@drawable/ic_action_new_event</item>
        <item>@drawable/ic_action_download</item>
        <item>@drawable/ic_action_edit</item>
        <item>@drawable/ic_action_place</item>
        <item>@drawable/ic_action_view_as_list</item>
        <item>@drawable/ic_action_settings</item>
        <item>@drawable/ic_action_about</item>
        <item>@drawable/ic_action_cancel</item>
    </array>

    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings_fragent">SettingsFragent</string>
    <string name="title_activity_settings_fragment">SettingsFragment</string>
    <string name="title_activity_about">About</string>

</resources>
