<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:scrollbars="vertical"
    android:fillViewport="true" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:orientation="vertical" >

	    <TextView
	        android:id="@+id/createAccountActivityTitle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	        
	        android:layout_marginTop="5dp"
	        android:text="@string/createAccountActivityTitle"
	        android:textColor="#009e08"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/createAccountUserNameTextView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/userName"
	        android:textColor="#009e08"
	        android:textSize="12sp" />
	    
	    <EditText
	        android:id="@+id/createAccountUserNameEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPersonName" />
	    
	     <TextView
	        android:id="@+id/createAccountEmailTextView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/email"
	        android:textColor="#009e08"
	        android:textSize="12sp" />
	    
	    <EditText
	        android:id="@+id/createAccountEmailEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textEmailAddress" />
	    
	    <TextView
	        android:id="@+id/createAccountFirstNameTextView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/firstName"
	        android:textColor="#009e08"
	        android:textSize="12sp" />
	    
	    <EditText
	        android:id="@+id/createAccountFirstNameEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPersonName" />
	    
	    <TextView
	        android:id="@+id/createAccountLastNameTextView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/lastName"
	        android:textColor="#009e08"
	        android:textSize="12sp" />
	    
	    <EditText
	        android:id="@+id/createAccountLastNameEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPersonName" />
	    
	    <TextView
	        android:id="@+id/createAccountPasswordTextView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/password"
	        android:textColor="#009e08"
	        android:textSize="12sp" />
	    
	    <EditText
	        android:id="@+id/createAccountPasswordEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword" />
	    
	     <TextView
	        android:id="@+id/createAccountConfirmPasswordTextView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/confirmPassword"
	        android:textColor="#009e08"
	        android:textSize="12sp" />
	    
	     <EditText
	        android:id="@+id/createAccountConfirmPasswordEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword" />
	     
	    <TextView
	        android:id="@+id/createAccountLegalDisclaimerTextView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/legalDisclaimer"
	        android:textColor="#009e08"
	        android:textSize="12sp" />
	    
	    <Button
	        android:id="@+id/createAccountButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:onClick="registerAccount"
	        android:text="@string/createAccountButtonText"
	        android:background="#009e08"
	        android:textColor="#f4f1e0"
		    android:textSize="12sp"	/>
    
	</LinearLayout>
</ScrollView>