<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.followMe.About" >

    <TextView
        android:id="@+id/aboutHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/aboutHeader"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#009e08" />

    <TextView
        android:id="@+id/aboutDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/aboutText"
        android:textColor="#009e08" />

    <TextView
        android:id="@+id/legalInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aboutDescription"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="23dp"
        android:gravity="center"
        android:text="@string/legalAbout"
        android:textColor="#009e08"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/aboutLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:autoLink="web"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/aboutLink" />

</RelativeLayout>