<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:orientation="vertical" >

		    <TextView
		        android:id="@+id/loginActivityTitle"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:text="@string/loginActivityTitle"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="#009e08" /> 
		     
		    <TextView
		        android:id="@+id/loginUserNameTextView"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:text="@+string/userName" 
		        android:textColor="#009e08"/>
		    
		    <EditText
		        android:id="@+id/loginUserNameEditText"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text" />
			
			<TextView
		         android:id="@+id/loginPasswordTextView"
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:layout_marginTop="5dp"
		         android:text="@+string/password"
		         android:textColor="#009e08" />
		
		     <EditText
		         android:id="@+id/loginPasswordEditText"
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:inputType="textPassword" />
		
		      <Button
		          android:id="@+id/loginSaveButton"
		          android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:layout_marginTop="15dp"	         
		          android:background="#009e08"
		          android:text="@string/login"
		          android:textColor="#ffffff"
		          android:textSize="12sp"
		          android:onClick="verifyAccount" />
		     
		     <Button
		         android:id="@+id/loginCreateAccountButton"
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:layout_marginTop="15dp"
		         android:layout_marginBottom="5dp"
		         android:background="#009e08"
		         android:text="@string/registerMe"
		         android:textColor="#ffffff"
		         android:textSize="12sp"
		         android:onClick="newUserAccount" />


		</LinearLayout>
</ScrollView>